made some modifications

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -33,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_path = DATA_FOLDER + DATA_TRAIN\n",
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +358,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,8 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sanitize_data(train_data, test_data):\n",
@@ -387,7 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "(sanitized_train_data, sanitized_test_data) = sanitize_data(train_data, test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -606,39 +623,55 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "(sanitized_train_data, sanitized_test_data) = sanitize_data(train_data, test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
     "sanitized_train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "features = sanitized_train_data[sanitized_train_data.columns[2:-1]].apply(lambda x: x.corr(y)).sort_values().where(lambda x : abs(x) > 0.1).dropna().index"
+    "def rename_y(higgs_value, background_value, named_y):\n",
+    "    return pd.Series(list(map(lambda x : higgs_value if x=='s' else background_value, named_y)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = rename_y(1, -1, train_data['Prediction'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "features = sanitized_train_data[sanitized_train_data.columns[2:-1]].apply(lambda x: x.corr(y)).sort_values().where(lambda x : abs(x) > 0).dropna().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sanitized_train_data = sanitized_train_data[features]\n",
@@ -647,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -662,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -673,28 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def rename_y(higgs_value, background_value, named_y):\n",
-    "    return pd.Series(list(map(lambda x : higgs_value if x=='s' else background_value, named_y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = rename_y(1, -1, train_data['Prediction'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -706,17 +718,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.27119023,  0.26232572,  0.51634521,  0.8980604 ,  0.44783269,\n",
-       "        0.38228516,  0.02285752,  0.61729405,  0.27447737,  0.02219778])"
+       "array([ 0.45081562,  0.98658443,  0.2315122 ,  0.33738645,  0.83153747,\n",
+       "        0.25236096,  0.38951041,  0.26778252,  0.33749972,  0.24265339,\n",
+       "        0.21065176,  0.06988096,  0.92874026,  0.41427786,  0.80947441,\n",
+       "        0.29644061,  0.56944155,  0.8716348 ,  0.22219575,  0.05552831,\n",
+       "        0.33718808,  0.87709896,  0.40428939,  0.75493505,  0.35279373,\n",
+       "        0.30651034,  0.79101361])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -768,7 +784,7 @@
     "        gradient = compute_gradient(y, tx, w)\n",
     "        loss = compute_loss(y, tx, w)\n",
     "        # update w by gradient\n",
-    "        w = w - gamma * gradient\n",
+    "        w = w - gamma/(n_iter+1) * gradient\n",
     "\n",
     "    return (w, loss)\n",
     "\n",
@@ -791,8 +807,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tx_train = standardize(tx_train)\n",
@@ -801,45 +819,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([  7.23985034e+166,  -2.99665935e+167,  -5.08584338e+166,\n",
-       "          1.44830388e+168,  -7.74323581e+166,   2.50864049e+167,\n",
-       "         -1.03566812e+166,  -8.47630359e+167,   7.08260564e+167,\n",
-       "          1.53923061e+168,   1.21621404e+167,   8.05022440e+167,\n",
-       "         -2.06677819e+166,   7.06282445e+167,   5.67975410e+165,\n",
-       "          1.02765798e+166,   6.10567546e+167,   1.70429176e+166,\n",
-       "         -5.90288228e+165,   1.00455549e+168,   1.38395074e+166,\n",
-       "          1.46273071e+168,   1.16594627e+168,   1.16733312e+168,\n",
-       "          1.99108625e+165,   3.57014941e+165,   6.78358962e+167,\n",
-       "          2.08139291e+164,  -1.17693522e+166,   1.51809422e+168]), inf)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 16s, sys: 6.47 s, total: 1min 23s\n",
+      "Wall time: 16.9 s\n"
+     ]
     }
    ],
    "source": [
-    "least_squares_GD(y, tx, initial_w, 500, 0.5)"
+    "%time (w_gd, loss_gd) = least_squares_GD(y, tx_train, initial_w, 1000, 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.31617195  0.12215016 -0.01009463 -0.23358527  0.08397799  0.0496061\n",
+      "  0.0302796   0.01335842  0.01227356  0.06531162  0.01335918 -0.02083392\n",
+      "  0.06517899  0.03404617  0.02476472  0.22272     0.01111963  0.18587984\n",
+      "  0.24164235 -0.22149372 -0.19964069  0.1084294   0.01610927  0.36570135\n",
+      " -0.03108539  0.35486111  0.29220601] \n",
+      "\n",
+      "loss:  0.4429673382499393\n"
+     ]
+    }
+   ],
    "source": [
-    "(w, loss) = least_squares(y, tx_train)"
+    "print(w_gd, \"\\n\\nloss: \", loss_gd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 137 ms, sys: 16.2 ms, total: 153 ms\n",
+      "Wall time: 36.5 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time (w_ls, loss_ls) = least_squares(y, tx_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  3.05570056e-03   2.38243929e-02  -4.18067448e-02  -2.75625228e-01\n",
+      "  -3.03850570e-02  -1.42864279e-03  -1.60837891e-03  -1.36505633e-03\n",
+      "   7.21486871e-05  -5.39883079e-04   1.62736727e-03  -8.67365915e-04\n",
+      "   2.22470868e-03   2.80380414e-03   1.11935384e-02   3.30121356e-01\n",
+      "  -6.76371952e-02  -1.30077838e-02   5.44141852e-02  -5.54102207e-02\n",
+      "  -1.03911107e-02   7.96394601e-02   8.66326285e-02   2.88435857e-02\n",
+      "   2.15425122e-01   2.87542904e-01   1.56374874e-01] \n",
+      "\n",
+      "loss:  0.4099988598411523\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w_ls, \"\\n\\nloss: \", loss_ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -856,22 +920,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([], dtype=int64),)"
+       "array([-1., -1., -1., ...,  1.,  1., -1.])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = predict_labels(w, tx_test)\n",
+    "y_pred = predict_labels(w_ls, tx_test)\n",
     "y_pred"
    ]
   },
@@ -908,7 +972,9 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "create_csv_submission(sanitized_data_test['Id'], y_pred, \"test2.csv\")"
@@ -921,6 +987,7 @@
     "Test n : algorithm / features / y / w\n",
     "- - - - - - - - - - - - - - - - - - - \n",
     "Test 1 : least_squares / all features standardized / y = -1,1 / random init_w\n",
+    "\n",
     "Test 2 : least_squares / corr > 0.1 features standardized / y = -1,1 / random init_w"
    ]
   }
