Corrected run.py + added new info about 2 tests

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -614,9 +614,15 @@
     "\n",
     "Test 25 : balanced / standardized test_set with mean and std from train_set / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime with degrees = [11, 11, 10, 9] and lambdas = [0.0001, 3.1622776601683795e-05, 0.00031622776601683794, 0.01] / New features being inverse log\n",
     "\n",
-    "Test 26 : non-balanced / standardized test_set with mean and std from train_set BUT AFTER SEPARATING / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime (unknown degrees and lambdas) / New features being inverse log\n",
+    "Test 26 : non-balanced / standardized test_set with mean and std from train_set BUT AFTER SEPARATING / y=-1,1 / Separating into 3 models based on feature 22, using Ridge everytime (unknown degrees and lambdas) / New features being inverse log\n",
     "\n",
-    "Test 27 : non-balanced / standardized test_set with mean and std from train_set / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime with degrees = [10, 12, 10, 10] and lambdas = [0.00021544346900318823, 0.0031622776601683794, 0.0031622776601683794, 0.001] / New features being inverse log"
+    "Test 27 : non-balanced / standardized test_set with mean and std from train_set / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime with degrees = [10, 12, 10, 10] and lambdas = [0.00021544346900318823, 0.0031622776601683794, 0.0031622776601683794, 0.001] / New features being inverse log\n",
+    "\n",
+    "Test 28 : non-balanced / standardized test_set with mean and std from train_set / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime with degrees = [10, 12, 10, 10] and lambdas = [0.0001, 0.0031622776601683794, 0.001, 0.001] / New features being inverse log + pseudorapidity (eta)\n",
+    "\n",
+    "Test 29 : non-balanced / standardized test_set with mean and std from train_set BUT AFTER SEPARATING / y=-1,1 / Separating into 4 models based on feature 22, using Ridge everytime with degrees = [10, 12, 10, 10] and lambdas = [0.0002, 0.003, 0.003, 0.001] / New features being inverse log\n",
+    "\n",
+    "Test 30 : Test 26 with degrees = [11, 12, 10, 10] and lambdas = [0.00003, 0.003, 0.003, 0.001]"
    ]
   },
   {
